new topic button working

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="search">
+        <form>
+            <label for="buttonAdd">Create a new GIF button</label><br>
+            <input type="text" name="term" id="term" autocomplete="off">
+            <input type="submit" value="Add" id="addTerm">
+        </form>
+    </div>
     <div id="buttons"></div>
     <div id="images"></div>
     
