--- a/index.html
+++ b/index.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/javascript/app.js"></script>
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" href="assets/images/smile.ico">
+    <title>Gif Generator</title>
 </head>
+
 <body>
+    <h1>Gif Generator</h1>
     <div id="search">
         <form>
-            <label for="buttonAdd">Create a new GIF button</label><br>
+            <label for="buttonAdd">Create a new topic   button</label><br>
             <input type="text" name="term" id="term" autocomplete="off">
-            <input type="submit" value="Add" id="addTerm">
+            <input type="submit" value="Add" id="addTerm" class="button">
         </form>
     </div>
     <div id="buttons"></div>
-    <div id="images"></div>
-    
+    <div class="container">
+        <div id="images" class="row"></div>
+    </div>
+
 </body>
+
 </html>
