--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <input type="submit" value="Add" id="addTerm" class="button">
         </form>
     </div>
-    <div id="buttons"></div>
+    <div id="buttons" class="d-flex flex-wrap"></div>
     <div class="container">
         <div id="images" class="row"></div>
     </div>
